package org.example.Copa_Rey;

public interface AccionesDeportivas {

    void entrenar();
    void jugarPartido(String rival);

}
