package org.example.Copa_Rey;

public enum Equipos {
    BENJAMIN, ALEVIN, INFALTIL, CADETE, JUVENIL, SENIOR
}
