package org.example.Copa_Rey;

public interface FuncionesIntegrantes {

    void concentrarse();
    void viajar(String ciudad);
    void celebrarGol();

}
