package org.example.Copa_Rey;

public enum Posiciones {
    PORTERO, DEFENSA, CENTROCAMPISTA, DELANTERO;
}
